@@ -9,6 +9,7 @@ Revision history for Perl extension Net::SSLeay.
 	- When building Net-SSLeay, search for the openssl binary in the same directory
 	  in which Perl is installed (i.e. $Config{prefix}/bin/). Thanks to Henrik
 	  Grimler for the patch.
+	- Expose EVP_PKEY_security_bits. Thanks to Felipe Gasper.
 
 1.93_01 2022-03-20
 	- LibreSSL 3.5.0 has removed access to internal data
